@@ -1,14 +1,15 @@
 Package: MPTinR
 Type: Package
 Title: Analyze Multinomial Processing Tree Models
-Version: 1.1.1
+Version: 1.1.2
 Date: 2013-02-15
-Author: Henrik Singmann and David Kellen
+Author: Henrik Singmann, David Kellen, and Christian Mueller
 Maintainer: Henrik Singmann <henrik.singmann@psychologie.uni-freiburg.de>
 Description: MPTinR provides a user-friendly way for the analysis of multinomial processing tree (MPT) models (e.g.,  Riefer, D. M., and Batchelder, W. H. [1988]. Multinomial modeling and the measurement of cognitive processes. Psychological Review, 95, 318-339) for single and multiple datasets. The main functions perform model fitting and model selection. Model selection can be done using AIC, BIC, or the Fisher Information Approximation (FIA) a measure based on the Minimum Description Length (MDL) framework. The model and restrictions can specified in external files or within an R script in an intuitive syntax. The 'classical' .EQN file format for model files is also supported. Besides MPTs, MPTinR can fit a wide variety of other cognitive models such as SDT models (see fit.model). MPTinR supports multicore fitting using the snowfall package. MPTinR can generate data generating from a model for e.g., parametric bootstrap and plot predicted versus observed data.
 URL: http://www.psychologie.uni-freiburg.de/Members/singmann/R/mptinr
 License: GPL (>= 2)
-Depends: R (>= 2.11.0), numDeriv
+Depends: R (>= 2.11.0), numDeriv, RcppEigen, Rcpp
+LinkingTo: RcppEigen, Rcpp
 Suggests: snowfall (>= 1.84)
 LazyLoad: yes
 ByteCompile: yes
